--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Test-Pod-Snippets
-version: 0.02
+version: 0.03_01
 author:
   - 'Yanick Champoux <cpan@babyl.dyndns.org>'
 abstract: Generate tests from pod code snippets
@@ -13,7 +13,10 @@ build_requires:
 provides:
   Test::Pod::Snippets:
     file: lib/Test/Pod/Snippets.pm
-    version: 0.02
+    version: 0.03_01
+  Test::Pod::Snippets::Parser:
+    file: lib/Test/Pod/Snippets/Parser.pm
+    version: 0.03_01
 generated_by: Module::Build version 0.2806
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
