--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Test-Pod-Snippets
-version: 0.03_02
+version: 0.03_03
 author:
   - 'Yanick Champoux <cpan@babyl.dyndns.org>'
 abstract: Generate tests from pod code snippets
@@ -8,15 +8,16 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 build_requires:
+  Object::InsideOut: 0
   Pod::Parser: 0
   Test::More: 0
 provides:
   Test::Pod::Snippets:
     file: lib/Test/Pod/Snippets.pm
-    version: 0.03_02
+    version: 0.03_03
   Test::Pod::Snippets::Parser:
     file: lib/Test/Pod/Snippets/Parser.pm
-    version: 0.03_02
+    version: 0.03_03
 generated_by: Module::Build version 0.2806
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
