--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Test-Pod-Snippets
-version: 0.05
+version: 0.06
 author:
   - 'Yanick Champoux <yanick@cpan.org>'
 abstract: Generate tests from pod code snippets
@@ -10,15 +10,16 @@ resources:
 build_requires:
   Module::Locate: 0
   Object::InsideOut: 0
+  Params::Validate: 0
   Pod::Parser: 0
   Test::More: 0
 provides:
   Test::Pod::Snippets:
     file: lib/Test/Pod/Snippets.pm
-    version: 0.05
+    version: 0.06
   Test::Pod::Snippets::Parser:
     file: lib/Test/Pod/Snippets/Parser.pm
-    version: 0.05
+    version: 0.06
 generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
